feat: bing tings
