# potion-seller/src/api/gen/models.go
@@ -3,20 +3,19 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package gen
 
-// Defines values for ItemRarity.
+// Defines values for ProductRarity.
 const (
-	Common    ItemRarity = "common"
-	Epic      ItemRarity = "epic"
-	Legendary ItemRarity = "legendary"
-	Rare      ItemRarity = "rare"
-	Uncommon  ItemRarity = "uncommon"
+	Common    ProductRarity = "common"
+	Epic      ProductRarity = "epic"
+	Legendary ProductRarity = "legendary"
+	Rare      ProductRarity = "rare"
 )
 
-// Defines values for ItemType.
+// Defines values for ProductType.
 const (
-	Charm  ItemType = "charm"
-	Potion ItemType = "potion"
-	Weapon ItemType = "weapon"
+	Charm  ProductType = "charm"
+	Potion ProductType = "potion"
+	Weapon ProductType = "weapon"
 )
 
 // Error defines model for Error.
@@ -25,51 +24,51 @@ type Error struct {
 	Message *string `json:"message,omitempty"`
 }
 
-// Item defines model for Item.
-type Item struct {
-	// Description Short description of the item.
+// Product defines model for Product.
+type Product struct {
+	// Description Short description of the product.
 	Description *string `json:"description,omitempty"`
 	Id          string  `json:"id"`
 
 	// Image URL for the product image
 	Image *string `json:"image,omitempty"`
 
-	// Name Display name of the item.
+	// Name Display name of the product.
 	Name string `json:"name"`
 
 	// Price Price per unit.
 	Price float32 `json:"price"`
 
-	// Rarity Rarity classification of the item.
-	Rarity *ItemRarity `json:"rarity,omitempty"`
+	// Quantity Units currently in stock.
+	Quantity *int `json:"quantity,omitempty"`
 
-	// Stock Units currently in stock.
-	Stock int `json:"stock"`
+	// Rarity Rarity classification of the product.
+	Rarity *ProductRarity `json:"rarity,omitempty"`
 
-	// Type Type of the item
-	Type *ItemType `json:"type,omitempty"`
+	// Type Type of the product
+	Type *ProductType `json:"type,omitempty"`
 }
 
-// ItemRarity Rarity classification of the item.
-type ItemRarity string
+// ProductRarity Rarity classification of the product.
+type ProductRarity string
 
-// ItemType Type of the item
-type ItemType string
+// ProductType Type of the product
+type ProductType string
 
-// GetItemsParams defines parameters for GetItems.
-type GetItemsParams struct {
-	// Limit Maximum number of items to return.
+// GetProductsParams defines parameters for GetProducts.
+type GetProductsParams struct {
+	// Limit Maximum number of products to return.
 	Limit *int `form:"limit,omitempty" json:"limit,omitempty"`
 
-	// Offset Number of items to skip before starting to collect the result set.
+	// Offset Number of products to skip before starting to collect the result set.
 	Offset *int `form:"offset,omitempty" json:"offset,omitempty"`
 }
 
-// PostItemsItemIdPurchaseJSONBody defines parameters for PostItemsItemIdPurchase.
-type PostItemsItemIdPurchaseJSONBody struct {
+// PostProductsProductIdPurchaseJSONBody defines parameters for PostProductsProductIdPurchase.
+type PostProductsProductIdPurchaseJSONBody struct {
 	// Quantity Number of units to purchase.
 	Quantity int `json:"quantity"`
 }
 
-// PostItemsItemIdPurchaseJSONRequestBody defines body for PostItemsItemIdPurchase for application/json ContentType.
-type PostItemsItemIdPurchaseJSONRequestBody PostItemsItemIdPurchaseJSONBody
+// PostProductsProductIdPurchaseJSONRequestBody defines body for PostProductsProductIdPurchase for application/json ContentType.
+type PostProductsProductIdPurchaseJSONRequestBody PostProductsProductIdPurchaseJSONBody
